--- a/constantclass.cls
+++ b/constantclass.cls
@@ -11,15 +11,33 @@ Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = True
 Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = True
+Option Explicit
 Dim mValue As Variant
+Public flag As Boolean
 Public Property Get Value() As Variant
 Attribute Value.VB_UserMemId = 0
+If flag Then
+Set Value = mValue
+Else
 Value = mValue
+End If
 End Property
 Public Property Let Value(RHS As Variant)
 MyEr "Constant value", "Σταθερή τιμή"
 Err.Raise 20
 End Property
+Public Property Set Value(RHS As Variant)
+MyEr "Constant value", "Σταθερή τιμή"
+Err.Raise 20
+End Property
+
 Public Sub DefineOnce(RHS As Variant)
-If Typename(mValye) = "Empty" Then mValue = RHS
+If Typename(mValue) = "Empty" Then
+If MyIsObject(RHS) Then
+    flag = True
+    Set mValue = RHS
+Else
+    mValue = RHS
+End If
+End If
 End Sub
